Patched JWTToken Service impl based on latest changes